--- a/OpticalValleyUnite/Classes/UI/PatrolResult/ViewController/YQResultDetail.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PatrolResult/ViewController/YQResultDetail.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Result Detail View Controller-->
         <scene sceneID="OyF-r2-0Ol">
             <objects>
-                <viewController id="HIR-if-Ycd" sceneMemberID="viewController">
+                <viewController id="HIR-if-Ycd" customClass="YQResultDetailViewController" customModule="OpticalValleyUnite" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wUJ-sC-qK3"/>
                         <viewControllerLayoutGuide type="bottom" id="MUT-0N-MQy"/>
@@ -20,12 +20,129 @@
                     <view key="view" contentMode="scaleToFill" id="Qt3-IK-909">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f06-K7-1tK">
+                                <rect key="frame" x="0.0" y="20" width="375" height="260"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yY9-HL-1YB">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="25"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="巡查点信息" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4E-lB-LW5">
+                                                <rect key="frame" x="144" y="0.0" width="87" height="25"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="n4E-lB-LW5" firstAttribute="top" secondItem="yY9-HL-1YB" secondAttribute="top" id="2aA-XJ-q4D"/>
+                                            <constraint firstItem="n4E-lB-LW5" firstAttribute="centerY" secondItem="yY9-HL-1YB" secondAttribute="centerY" id="A8V-oe-9Q6"/>
+                                            <constraint firstItem="n4E-lB-LW5" firstAttribute="centerX" secondItem="yY9-HL-1YB" secondAttribute="centerX" id="Qxd-iN-sXe"/>
+                                            <constraint firstAttribute="height" constant="25" id="Ton-gg-Do9"/>
+                                            <constraint firstAttribute="bottom" secondItem="n4E-lB-LW5" secondAttribute="bottom" id="riQ-fE-m1J"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aTq-N5-Xss">
+                                        <rect key="frame" x="0.0" y="235" width="375" height="25"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="巡查结果" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CAR-iJ-kBz">
+                                                <rect key="frame" x="152.5" y="0.0" width="70" height="25"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="CAR-iJ-kBz" secondAttribute="bottom" id="GaY-Jh-3gW"/>
+                                            <constraint firstItem="CAR-iJ-kBz" firstAttribute="centerX" secondItem="aTq-N5-Xss" secondAttribute="centerX" id="ZAL-xo-VP9"/>
+                                            <constraint firstItem="CAR-iJ-kBz" firstAttribute="top" secondItem="aTq-N5-Xss" secondAttribute="top" id="c9m-d2-nD3"/>
+                                            <constraint firstAttribute="height" constant="25" id="cpn-cA-mgI"/>
+                                            <constraint firstItem="CAR-iJ-kBz" firstAttribute="centerY" secondItem="aTq-N5-Xss" secondAttribute="centerY" id="lVn-9X-t0M"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点位名称:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oem-gl-ik4">
+                                        <rect key="frame" x="54.5" y="30" width="66" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="点位名称:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKY-tZ-ZLX">
+                                        <rect key="frame" x="59" y="60" width="66" height="18"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="点位名称:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pBl-SX-c7G">
+                                        <rect key="frame" x="59" y="90" width="66" height="18"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="点位名称:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Je-39-8dS">
+                                        <rect key="frame" x="59" y="120" width="66" height="18"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="aTq-N5-Xss" secondAttribute="trailing" id="6Ov-5X-jzg"/>
+                                    <constraint firstItem="yY9-HL-1YB" firstAttribute="top" secondItem="f06-K7-1tK" secondAttribute="top" id="F7X-Xb-ipb"/>
+                                    <constraint firstItem="oem-gl-ik4" firstAttribute="top" secondItem="yY9-HL-1YB" secondAttribute="bottom" constant="5" id="Iaw-fb-pSs"/>
+                                    <constraint firstAttribute="bottom" secondItem="aTq-N5-Xss" secondAttribute="bottom" id="fPU-mk-esB"/>
+                                    <constraint firstItem="oem-gl-ik4" firstAttribute="centerX" secondItem="f06-K7-1tK" secondAttribute="centerX" constant="-100" id="fpJ-tQ-beo"/>
+                                    <constraint firstAttribute="trailing" secondItem="yY9-HL-1YB" secondAttribute="trailing" id="kpT-4f-dNt"/>
+                                    <constraint firstItem="yY9-HL-1YB" firstAttribute="leading" secondItem="f06-K7-1tK" secondAttribute="leading" id="rQC-0n-QHf"/>
+                                    <constraint firstAttribute="height" constant="260" id="xcv-pW-tSP"/>
+                                    <constraint firstItem="aTq-N5-Xss" firstAttribute="leading" secondItem="f06-K7-1tK" secondAttribute="leading" id="xha-KF-gKs"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ee4-oe-rsF">
+                                <rect key="frame" x="0.0" y="280" width="375" height="386"/>
+                                <subviews>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RF8-fW-HD2">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="OkU-fY-gM8"/>
+                                        </constraints>
+                                    </scrollView>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jv6-xf-Ku9">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="342"/>
+                                    </scrollView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="RF8-fW-HD2" secondAttribute="trailing" id="1jE-sI-uT7"/>
+                                    <constraint firstAttribute="bottom" secondItem="jv6-xf-Ku9" secondAttribute="bottom" id="6dp-ds-GrU"/>
+                                    <constraint firstAttribute="trailing" secondItem="jv6-xf-Ku9" secondAttribute="trailing" id="6wu-sq-WUW"/>
+                                    <constraint firstItem="jv6-xf-Ku9" firstAttribute="top" secondItem="RF8-fW-HD2" secondAttribute="bottom" id="Snc-nG-Zoh"/>
+                                    <constraint firstItem="RF8-fW-HD2" firstAttribute="top" secondItem="ee4-oe-rsF" secondAttribute="top" id="hDv-xw-1Ec"/>
+                                    <constraint firstItem="jv6-xf-Ku9" firstAttribute="leading" secondItem="ee4-oe-rsF" secondAttribute="leading" id="rw0-Bp-Rw2"/>
+                                    <constraint firstItem="RF8-fW-HD2" firstAttribute="leading" secondItem="ee4-oe-rsF" secondAttribute="leading" id="vqO-Et-eoc"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="f06-K7-1tK" secondAttribute="trailing" id="28J-FI-c23"/>
+                            <constraint firstAttribute="trailing" secondItem="ee4-oe-rsF" secondAttribute="trailing" id="4IC-bt-rFX"/>
+                            <constraint firstItem="f06-K7-1tK" firstAttribute="leading" secondItem="Qt3-IK-909" secondAttribute="leading" id="BbX-78-DhE"/>
+                            <constraint firstItem="ee4-oe-rsF" firstAttribute="top" secondItem="f06-K7-1tK" secondAttribute="bottom" id="MSM-2l-nsC"/>
+                            <constraint firstItem="ee4-oe-rsF" firstAttribute="leading" secondItem="Qt3-IK-909" secondAttribute="leading" id="Q5R-vS-PSm"/>
+                            <constraint firstItem="f06-K7-1tK" firstAttribute="top" secondItem="wUJ-sC-qK3" secondAttribute="bottom" id="V9w-AT-mSu"/>
+                            <constraint firstItem="MUT-0N-MQy" firstAttribute="top" secondItem="ee4-oe-rsF" secondAttribute="bottom" constant="1" id="qCq-nX-QW1"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="utz-rA-icw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="110" y="54"/>
+            <point key="canvasLocation" x="109.59999999999999" y="53.523238380809602"/>
         </scene>
     </scenes>
 </document>
