--- a/OpticalValleyUnite/Classes/UI/PatrolResult/ViewController/YQResultMapView.storyboard
+++ b/OpticalValleyUnite/Classes/UI/PatrolResult/ViewController/YQResultMapView.storyboard
@@ -37,15 +37,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DdC-kj-vOp">
-                                <rect key="frame" x="0.0" y="64" width="375" height="64"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DdC-kj-vOp" customClass="DateChooseView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="375" height="80"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="fO6-ih-ei0"/>
+                                    <constraint firstAttribute="height" constant="80" id="fO6-ih-ei0"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QP9-C7-7UW" customClass="MAMapView">
-                                <rect key="frame" x="0.0" y="128" width="375" height="539"/>
+                                <rect key="frame" x="0.0" y="144" width="375" height="523"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
@@ -63,12 +63,12 @@
                     <navigationItem key="navigationItem" id="cbB-SI-8ge"/>
                     <connections>
                         <outlet property="mapView" destination="QP9-C7-7UW" id="kpj-qo-j4C"/>
-                        <outlet property="timeView" destination="DdC-kj-vOp" id="Yqw-Pp-kjN"/>
+                        <outlet property="timeView" destination="DdC-kj-vOp" id="HVC-tC-WSs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="20z-Jz-mLx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-180" y="81"/>
+            <point key="canvasLocation" x="-322" y="54"/>
         </scene>
     </scenes>
 </document>
