--- a/OpticalValleyUnite/Classes/UI/PatrolResult/View/YQScoreResult.xib
+++ b/OpticalValleyUnite/Classes/UI/PatrolResult/View/YQScoreResult.xib
@@ -56,7 +56,7 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vYw-Wf-W0c" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vYw-Wf-W0c" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
                     <rect key="frame" x="30" y="225" width="358" height="60"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
